added PACMAN game

--- a/index.html
+++ b/index.html
@@ -201,11 +201,11 @@
                     <!-- Ludo card card-2 -->
                     <div class="col">
                         <div class="card">
-                            <a href="LUDO.html" target="_blank" class="text-decoration-none">
-                                <img src="pic/ludo.png" class="card-img-top p-1" alt="pic_ludo">
+                            <a href="pacman.html" target="_blank" class="text-decoration-none">
+                                <img src="pic/pacman.png" class="card-img-top p-1" alt="pic_ludo">
                                 <div class="card-body  text-dark">
                                     <h5 class="card-title">LUDO</h5>
-                                    <p class="card-text text-muted">Digital recreation of the classic Ludo board game
+                                    <p class="card-text text-muted">Digital recreation of the classic PACMAN game
                                         using HTML,
                                         CSS,
                                         and Bootstrap. Responsive for multiple device screens</p>
