--- a/pacman.html
+++ b/pacman.html
@@ -42,7 +42,7 @@
 <body>
 	<div id="shim">shim for font face</div>
 	<h1>Pacman</h1>
-	<p style="text-align:center;">Built by Aditya Choudhary</p>
+	<p style="text-align:center;">Developed by Aditya Choudhary</p>
 	<div id="pacman"></div>
 
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
