--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                     <!-- Chess card card-3 -->
                     <div class="col">
                         <div class="card">
-                            <a href="ChessboardBS.html" target="_blank" class="text-decoration-none"><img
+                            <a href="chess.html" target="_blank" class="text-decoration-none"><img
                                     src="pic/chess.png" class="card-img-top p-1" alt="pic_chessboard">
                                 <div class="card-body text-dark">
                                     <h5 class="card-title">CHESSBOARD</h5>
