--- a/Resume.html
+++ b/Resume.html
@@ -46,13 +46,13 @@
                     <!-- Photo -->
                     <div class="row px-4 text-center text-light">
                         <div>
-                            <img src="pic/Photosquare.jpg"
-                                alt="Display Picture" class="img-fluid rounded-circle my-5 border border-5 border-light">
+                            <img src="pic/Photosquare.jpg" alt="Display Picture"
+                                class="img-fluid rounded-circle my-5 border border-5 border-light">
                         </div>
                     </div>
 
-                     <!-- Show on Mobile devices only -->
-                     <div class="d-md-block d-lg-none text-center mb-5">
+                    <!-- Show on Mobile devices only -->
+                    <div class="d-md-block d-lg-none text-center mb-5">
                         <h1 class="text-white fw-bold">ADITYA CHOUDHARY</h1>
                         <h4 class="text-muted">WEB DEVELOPER</h4>
                     </div>
@@ -82,7 +82,8 @@
 
                         <div class="row mb-2">
                             <div class="col-lg-3 col-3 "><i class="fa-brands fa-linkedin fs-4 px-4 mt-1"></i></div>
-                            <a class="col-lg-9 col-9 text-break text-decoration-none text-light" href="https://www.linkedin.com/in/aditya-choudhary-908307171/" target="_blank">
+                            <a class="col-lg-9 col-9 text-break text-decoration-none text-light"
+                                href="https://www.linkedin.com/in/aditya-choudhary-908307171/" target="_blank">
                                 https://www.linkedin.com/in/aditya-choudhary-908307171/</a>
                         </div>
 
@@ -107,7 +108,7 @@
                                 </div>
                             </div>
                             <div class="row mb-3">
-                                <div>Bootstrap</div>
+                                <div>DSA in C/C++</div>
 
                                 <div class="progress bg-secondary">
                                     <div class="progress-bar" role="progressbar"
@@ -151,27 +152,27 @@
                     <!--Socials -->
                     <div class="row text-white">
                         <div>
-                            <h4 class="text-center">SOCIALS</h4>
+                            <h4 class="text-center ">SOCIALS</h4>
                             <hr class="border border-2 rounded">
                         </div>
 
                         <div class="mb-2 p-4">
-                            <div class="mb-3 bg-secondary rounded-pill col-lg-7 col-sm-12">
+                            <div class="mb-3 bg-dark bg-gradient rounded-pill col-lg-7 col-sm-12">
                                 <div><a class="text-white"
-                                        href="https://twitter.com/adiityachoudhry?t=UdPDr3spRYLURaGo5MdfhQ&s=35"
+                                        href="https://github.com/adiityachoudhary"
                                         target="_blank" style="text-decoration: none;"><i
-                                            class="fa-brands border border-5 border-white bg-white rounded-circle fa-twitter fa-beat-fade text-info me-2"></i>Twitter</a>
+                                            class="fa-brands border border-5 border-white bg-white rounded-circle fa-github fa-beat-fade text-dark me-2 "></i>GitHub</a>
                                 </div>
                             </div>
-                            <div class="mb-3 bg-secondary rounded-pill col-lg-7 col-sm-12">
+                            <div class="mb-3 bg-dark bg-gradient rounded-pill col-lg-7 col-sm-12">
                                 <div><a class="text-white"
                                         href="https://www.linkedin.com/in/aditya-choudhary-908307171/" target="_blank"
                                         style="text-decoration: none;"><i
-                                            class="fa-brands border border-5 border-white bg-white rounded-circle fa-linkedin fa-beat-fade text-primary me-2"></i>linkedin</a>
+                                            class="fa-brands border border-5 border-white bg-white rounded-circle fa-linkedin fa-beat-fade text-primary me-2"></i>Linkedin</a>
                                 </div>
 
                             </div>
-                            <div class="mb-1 bg-secondary rounded-pill col-lg-7 col-sm-12">
+                            <div class="mb-1 bg-dark bg-gradient rounded-pill col-lg-7 col-sm-12">
                                 <div><a class="text-white" href="https://www.instagram.com/adiityachoudhary/"
                                         target="_blank" style="text-decoration: none;"><i
                                             class="fa-brands border border-5 border-white rounded-circle text-dark bg-white fa-instagram fa-beat-fade me-2"></i>Instagram</a>
