Fixed gutter margin and width of cards in homepage

--- a/index.html
+++ b/index.html
@@ -71,14 +71,15 @@
                             focused on building responsive, elegant, and user-friendly digital solutions.
                             Whether it's front-end interfaces or back-end logic, I combine creativity with clean
                             code to deliver real impact.
-                            Scroll down, explore my work, and let’s collaborate to build something remarkable.
-
-                </p>
+                            Scroll down, explore my work, and let’s collaborate to build something remarkable.</p>
+                            
             </div>
+
+            <br>
 
 
             <!-- Group of cards -->
-            <div class=" row mb-4 d-flex justify-content-center pb-3 m-3 cards ">
+            <div class=" row mb-4 d-flex justify-content-center pb-3 m-1 cards ">
                 <!-- Discover Our Work text-->
                 <div class="col-12 display-3 text-center pt-3 discover" id="projects">Discover my Work</div>
 
@@ -155,6 +156,7 @@
             </div>
         </div>
 
+        <br>
         <!-- footer -->
         <footer class="py-3 text-center text-white" id="contact">
             <ul class="list-group list-group-horizontal-lg ">
