Renamed css to style.css and fixed PACMAN label in website

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- bootstrap -->
     <link href="bs/css/bootstrap.css" rel="stylesheet">
     <!-- navbar css -->
-    <link rel="stylesheet" href="css.css">
+    <link rel="stylesheet" href="style.css">
     <!-- favicon -->
     <link rel="icon" href="icon/aditya.ico">
     <title>Aditya Choudhary</title>
@@ -123,7 +123,7 @@
                             <a href="pacman.html" target="_blank" class="text-decoration-none">
                                 <img src="pic/pacman.png" class="card-img-top p-1" alt="pic_ludo">
                                 <div class="card-body  text-dark">
-                                    <h5 class="card-title">LUDO</h5>
+                                    <h5 class="card-title">PACMAN</h5>
                                     <p class="card-text text-muted">Digital recreation of the classic PACMAN game
                                         using HTML,
                                         CSS,
