Added Ecommerce in portfolio website

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             <a class="nav-link" href="Resume.html" target="_blank">About</a>
                         </li>
                         <li class=" nav-item">
-                            <a class="nav-link" href="#projects" >Projects</a>
+                            <a class="nav-link" href="#projects">Projects</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#contact">Contact</a>
@@ -67,12 +67,13 @@
             <div class="acrylic hero-box mx-auto">
                 <h1 class="text-center hero-title">Welcome to My Portfolio</h1>
                 <h5 class="hero-subtitle">Crafting Digital Experiences with Precision & Passion</h5>
-                <p class="hero-description">I'm <strong>Aditya Choudhary</strong>, a passionate <strong>Web Developer</strong>
-                            focused on building responsive, elegant, and user-friendly digital solutions.
-                            Whether it's front-end interfaces or back-end logic, I combine creativity with clean
-                            code to deliver real impact.
-                            Scroll down, explore my work, and let’s collaborate to build something remarkable.</p>
-                            
+                <p class="hero-description">I'm <strong>Aditya Choudhary</strong>, a passionate <strong>Web
+                        Developer</strong>
+                    focused on building responsive, elegant, and user-friendly digital solutions.
+                    Whether it's front-end interfaces or back-end logic, I combine creativity with clean
+                    code to deliver real impact.
+                    Scroll down, explore my work, and let’s collaborate to build something remarkable.</p>
+
             </div>
 
             <br>
@@ -86,7 +87,7 @@
                 <!-- four card -->
                 <div class="row row-cols-1 row-cols-md-2 g-4 p-1 ">
                     <!-- TO-DO card card-3 -->
-                    <div class="col">
+                    <div class="col order-3">
                         <div class="card">
                             <a href="To-do list\index.html" target="_blank" class="text-decoration-none"><img
                                     src="pic/todo.jpeg" class="card-img-top p-1" alt="to-do thumb">
@@ -101,7 +102,7 @@
                     </div>
 
                     <!-- Resume card card-1 -->
-                    <div class="col">
+                    <div class="col order-1">
                         <div class="card">
                             <a href="Resume.html" target="_blank" class="text-decoration-none"><img src="pic/resume.png"
                                     class="card-img-top p-1" alt="pic_resume">
@@ -117,8 +118,26 @@
                         </div>
                     </div>
 
+                    <!-- Ecommerce Water app card-1 -->
+                    <div class="col order-2">
+                        <div class="card">
+                            <a href="https://adiityachoudhary.github.io/Ecommerce_Website/" target="_blank"
+                                class="text-decoration-none"><img src="pic/ecomm.jpeg" class="card-img-top p-1"
+                                    alt="pic_resume">
+                                <div class="card-body  text-dark">
+                                    <h5 class="card-title">E-Commerce Website</h5>
+                                    <p class="card-text text-muted">Modern e-commerce website which features smooth navigation, add-to-cart functionality, quantity
+                                        management, and a consistent layout.
+                                        .</p>
+                                </div>
+                            </a>
+
+                        </div>
+                    </div>
+
+
                     <!-- Ludo card card-2 -->
-                    <div class="col">
+                    <div class="col order-4">
                         <div class="card">
                             <a href="pacman.html" target="_blank" class="text-decoration-none">
                                 <img src="pic/pacman.png" class="card-img-top p-1" alt="pic_ludo">
@@ -134,7 +153,7 @@
                     </div>
 
                     <!-- Chess card card-3 -->
-                    <div class="col">
+                    <div class="col order-5">
                         <div class="card">
                             <a href="chess.html" target="_blank" class="text-decoration-none"><img src="pic/chess.png"
                                     class="card-img-top p-1" alt="pic_chessboard">
