Added new Word Counter page in POrtfolio website

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <!-- four card -->
                 <div class="row row-cols-1 row-cols-md-2 g-4 p-1 ">
                     <!-- TO-DO card card-3 -->
-                    <div class="col order-3">
+                    <div class="col order-4">
                         <div class="card">
                             <a href="todo/index.html" target="_blank" class="text-decoration-none"><img
                                     src="pic/todo.jpeg" class="card-img-top p-1" alt="to-do thumb">
@@ -152,7 +152,7 @@
                     </div>
 
 
-                    <!-- Ludo card card-2 -->
+                    <!-- Pacman card card-2 -->
                     <div class="col order-2">
                         <div class="card">
                             <a href="pacman.html" target="_blank" class="text-decoration-none">
@@ -168,7 +168,7 @@
                         </div>
                     </div>
 
-                    <!-- Chess card card-3 -->
+                    <!-- Chessboard card-3 -->
                     <div class="col order-last">
                         <div class="card">
                             <a href="chess.html" target="_blank" class="text-decoration-none"><img src="pic/chess.png"
@@ -185,6 +185,23 @@
 
                         </div>
                     </div>
+
+                    <!-- word counter card-3 -->
+                    <div class="col order-3">
+                        <div class="card">
+                            <a href="word_counter/index.html" target="_blank" class="text-decoration-none"><img src="word_counter/word_counter.jpg"
+                                    class="card-img-top p-1" alt="pic_chessboard">
+                                <div class="card-body text-dark">
+                                    <h5 class="card-title">WORD COUNTER</h5>
+                                    <p class="card-text text-muted">A simple and efficient tool to count words, letters, and spaces in real-time. Built to boost productivity and track content length instantly.
+                                    </p>
+                                </div>
+                            </a>
+
+                        </div>
+                    </div>
+
+                    <!-- card end -->
 
 
                 </div>
