--- a/puzzle/puzzle.html
+++ b/puzzle/puzzle.html
@@ -20,7 +20,7 @@ body {
 <div id='fifteen'></div> <!--element "fifteen" in which the game will take place-->
 <br><br>
 <center class="mt-3" style="font-family:'Courier New', Courier, monospace;">Developed with lots of ☕ by <a href="https://adiityachoudhary.github.io/web-dev/"
-                        target="_parent">Aditya Choudhary</a></div>
+                        target="_parent">Aditya</a></div>
 </center>
 <script>
 var setup={
