--- a/word_counter/index.html
+++ b/word_counter/index.html
@@ -1,16 +1,20 @@
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Word Counter</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="icon.ico">
-  </head>
 
-  <body>
-    <section class="container" style="background-color: rgb(192, 236, 255);">
-      <h2 class="title">Word Counter</h2>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Word Counter</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="icon.ico">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+</head>
+
+<body>
+  <div class="container-fluid">
+    <section class="container px-3" style="background-color: rgb(192, 236, 255);">
+      <h2 class="title ">Word Counter</h2>
       <textarea class="text-input" placeholder="Paste text here..."></textarea>
       <section>
         <strong>Word Count: </strong>
@@ -25,10 +29,14 @@
         <span class="space-count">0</span>
       </section>
     </section>
-    <center class="mt-3" style="font-family:'Courier New', Courier, monospace;">Developed with lots of ☕ by <a href="https://adiityachoudhary.github.io/web-dev/"
-                        target="_parent">Aditya Choudhary</a></div>
-</center>
+    <center class="mt-3" style="font-family:'Courier New', Courier, monospace;">Developed with lots of ☕ by <a
+        href="https://adiityachoudhary.github.io/web-dev/" target="_parent">Aditya Choudhary</a>
+  </div>
+  </center>
+  </div>
 
-    <script src="app.js"></script>
-  </body>
+
+  <script src="app.js"></script>
+</body>
+
 </html>
