--- a/word_counter/index.html
+++ b/word_counter/index.html
@@ -29,7 +29,7 @@
         <span class="space-count">0</span>
       </section>
     </section>
-    <center class="mt-3" style="font-family:'Courier New', Courier, monospace;">Developed with lots of ☕ by <a
+    <center  style="font-family:'Courier New', Courier, monospace;">Developed with lots of ☕ by <a
         href="https://adiityachoudhary.github.io/web-dev/" target="_parent">Aditya Choudhary</a>
   </div>
   </center>
