--- a/puzzle/puzzle.html
+++ b/puzzle/puzzle.html
@@ -18,21 +18,24 @@
 </head>
 
 <body>
-    <div class="container-fluid">
+    <div class="container">
 
         <div id='fifteen' class="row"></div> <!--element "fifteen" in which the game will take place-->
 
-        <div class="row"><center class="mt-5" style="font-family:'Courier New', Courier, monospace;">Developed with lots of ☕ by <a
-            href="https://adiityachoudhary.github.io/web-dev/" target="_parent">Aditya</a></div>
-    </center></div>
+        <div class="row ">
+            <center class="" style="font-family:'Courier New', Courier, monospace;">Developed with lots of ☕ by <a
+                    href="https://adiityachoudhary.github.io/web-dev/" target="_parent">Aditya</a>
+        </div>
+        </center>
     </div>
-    
+    </div>
+
     <script>
         var setup = {
             puzzle_fifteen: {
                 diff: 300, // number of movements of the slots for shuffling pictures
                 size: [512, 640], // element size "fifteen" in pixels only
-                grid: [3, 4], // the number of squares in the height and width of the picture
+                grid: [2, 2], // the number of squares in the height and width of the picture
                 fill: true, // Stretching the area with the game to fit the element is recommended for fullscreen
                 number: false, // Slot sequence number
                 gamePad: true,
