--- a/puzzle/puzzle.html
+++ b/puzzle/puzzle.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container gx-0 mx-0 px-0">
 
         <div id='fifteen' class="row"></div> <!--element "fifteen" in which the game will take place-->
 
