--- a/puzzle/puzzle.html
+++ b/puzzle/puzzle.html
@@ -18,16 +18,9 @@
 </head>
 
 <body>
-    <div class="container gx-0 mx-0 px-0">
-
-        <div id='fifteen' class="row"></div> <!--element "fifteen" in which the game will take place-->
-
-        <div class="row ">
-            <center class="" style="font-family:'Courier New', Courier, monospace;">Developed with lots of ☕ by <a
-                    href="https://adiityachoudhary.github.io/web-dev/" target="_parent">Aditya</a>
-        </div>
-        </center>
-    </div>
+    <div id='fifteen' class="my-4"></div> <!--element "fifteen" in which the game will take place-->
+<br>
+    <div class="container text-center mt-4">Developed by with lots of ☕ by <a href="https://adiityachoudhary.github.io/web-dev/">Aditya Choudhary</a></div>
     </div>
 
     <script>
