--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <!-- Fancy Navbar -->
         <nav class="navbar navbar-expand-lg navbar-glass navbar-sticky">
             <div class="container">
-                <a class="navbar-brand" href="index.html">MyPortfolio</a>
+                <a class="navbar-brand" href="index.html">Portfolio</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarFancy"
                     aria-controls="navbarFancy" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
