Added Visitor counter in POrtfolio and water app website

--- a/index.html
+++ b/index.html
@@ -189,11 +189,13 @@
                     <!-- word counter card-3 -->
                     <div class="col order-3">
                         <div class="card">
-                            <a href="word_counter/index.html" target="_blank" class="text-decoration-none"><img src="word_counter/word_counter.jpg"
-                                    class="card-img-top p-1" alt="pic_chessboard">
+                            <a href="word_counter/index.html" target="_blank" class="text-decoration-none"><img
+                                    src="word_counter/word_counter.jpg" class="card-img-top p-1" alt="pic_chessboard">
                                 <div class="card-body text-dark">
                                     <h5 class="card-title">WORD COUNTER</h5>
-                                    <p class="card-text text-muted">A simple and efficient tool to count words, letters, and spaces in real-time. Built to boost productivity and track content length instantly.
+                                    <p class="card-text text-muted">A simple and efficient tool to count words, letters,
+                                        and spaces in real-time. Built to boost productivity and track content length
+                                        instantly.
                                     </p>
                                 </div>
                             </a>
@@ -239,6 +241,12 @@
                 <div class="col-lg-3 col-12 pt-2"><a href="index.html#home"><img src="pic/Photosquare.jpg"
                             alt="Display picture" class="rounded-circle img-fluid img-thumbnail"></a></div>
             </ul>
+
+            <!-- Visitor Counter -->
+            <div align="center">
+                <script type="text/javascript"
+                    src="https://www.freevisitorcounters.com/en/home/counter/1356475/t/5"></script>
+            </div>
         </footer>
 
         <script src="bs/js/bootstrap.js"></script>
