--- a/Resume.html
+++ b/Resume.html
@@ -63,29 +63,37 @@
                             <h4 class="text-center ">CONTACT</h4>
                             <hr class="border border-2 rounded">
                         </div>
-
+                        <!-- city -->
                         <div class="row mb-4">
-                            <div class="col-lg-3 col-3"><i class="fa-solid fa-location-dot px-4 pt-1 fs-4"></i>
+                            <div class="col-lg-3 col-3"><i class="fa-solid fa-location-dot fa-bounce px-4 pt-1 fs-4"></i>
                             </div>
                             <div class="col-lg-9 col-9 text-break">Patna, India</div>
                         </div>
+                        <!-- phone number -->
+                        <a href="tel:+917543030142" class="row mb-4 text-decoration-none text-light">
+                            <div class="col-lg-3 col-3 "><i class="fa-solid fa-phone fa-shake fs-4 px-4"></i></div>
+                            <div class="col-lg-9 col-9 text-break">+91 7543030142</div>
+                        </a>
 
-                        <div class="row mb-4">
-                            <div class="col-lg-3 col-3 "><i class="fa-solid fa-phone fs-4 px-4"></i></div>
-                            <div class="col-lg-9 col-9 ">7543030142</div>
-                        </div>
+                        <!-- mail -->
+                        <a href="mailto:caditya965@gmail.com" class="row mb-4 text-decoration-none text-light">
+                            <div class="col-lg-3 col-3 "><i class="fa-solid fa-at fa-spin fs-4 px-4"></i></div>
+                            <div class="col-lg-9 col-9 text-break">caditya965@gmail.com</div>
+                        </a>
 
-                        <div class="row mb-4">
-                            <div class="col-lg-3 col-3 "><i class="fa-solid fa-at fs-4 px-4"></i></div>
-                            <div class="col-lg-9 col-9 text-break">adiiityachoudhary@gmail.com</div>
-                        </div>
+                        <!-- github -->
+                        <a href="https://github.com/adiityachoudhary" target="_blank"
+                            class="row mb-4 text-decoration-none text-light">
+                            <div class="col-lg-3 col-3 "><i class="fa-brands fa-github fa-beat-fade fs-4 px-4 mt-1"></i></div>
+                            <div class="col-lg-9 col-9 text-break">github.com/adiityachoudhary</div>
+                        </a>
 
-                        <div class="row mb-2">
-                            <div class="col-lg-3 col-3 "><i class="fa-brands fa-linkedin fs-4 px-4 mt-1"></i></div>
-                            <a class="col-lg-9 col-9 text-break text-decoration-none text-light"
-                                href="https://www.linkedin.com/in/aditya-choudhary-908307171/" target="_blank">
-                                https://www.linkedin.com/in/aditya-choudhary-908307171/</a>
-                        </div>
+                        <!-- linkedin -->
+                        <a href="https://www.linkedin.com/in/adiityachoudhary/" target="_blank"
+                            class="row mb-2 text-decoration-none text-light">
+                            <div class="col-lg-3 col-3 "><i class="fa-brands fa-linkedin fa-beat fs-4 px-4 mt-1" style="--fa-animation-duration: 5s;"></i></div>
+                            <div class="col-lg-9 col-9 text-break">linkedin.com/in/adiityachoudhary</div>
+                        </a>
 
                     </div>
 
@@ -99,7 +107,7 @@
                         <!-- progress bars -->
                         <div class="px-5">
                             <div class="row mb-3">
-                                <div>Web Dev (HTML/CSS/JS)</div>
+                                <div>UI/ UX (HTML/CSS/JS)</div>
 
                                 <div class="progress bg-secondary">
                                     <div class="progress-bar" role="progressbar"
@@ -143,6 +151,16 @@
                                         aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </div>
+
+                            <div class="row mb-3">
+                                <div>Git/Github</div>
+
+                                <div class="progress bg-secondary">
+                                    <div class="progress-bar" role="progressbar"
+                                        style="width: 90%;background-color: rgb(255, 255, 255);color: black;"
+                                        aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </div>
                         </div>
 
 
@@ -157,27 +175,32 @@
                         </div>
 
                         <div class="mb-2 p-4">
-                            <div class="mb-3 bg-dark bg-gradient rounded-pill col-lg-7 col-sm-12">
-                                <div><a class="text-white"
-                                        href="https://github.com/adiityachoudhary"
-                                        target="_blank" style="text-decoration: none;"><i
-                                            class="fa-brands border border-5 border-white bg-white rounded-circle fa-github fa-beat-fade text-dark me-2 "></i>GitHub</a>
+                            
+                            <!-- github -->
+                            <a href="https://github.com/adiityachoudhary" target="_blank" class="text-decoration-none text-light">
+                                <div class="mb-3 bg-dark bg-gradient rounded-pill col-12">
+                                    <div><i class="fa-brands border border-5 border-white bg-white rounded-circle fa-github fa-beat-fade text-dark me-2 "style="--fa-animation-delay: 100ms;"></i>GitHub
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="mb-3 bg-dark bg-gradient rounded-pill col-lg-7 col-sm-12">
-                                <div><a class="text-white"
-                                        href="https://www.linkedin.com/in/aditya-choudhary-908307171/" target="_blank"
-                                        style="text-decoration: none;"><i
-                                            class="fa-brands border border-5 border-white bg-white rounded-circle fa-linkedin fa-beat-fade text-primary me-2"></i>Linkedin</a>
-                                </div>
+                            </a>
 
-                            </div>
-                            <div class="mb-1 bg-dark bg-gradient rounded-pill col-lg-7 col-sm-12">
-                                <div><a class="text-white" href="https://www.instagram.com/adiityachoudhary/"
-                                        target="_blank" style="text-decoration: none;"><i
-                                            class="fa-brands border border-5 border-white rounded-circle text-dark bg-white fa-instagram fa-beat-fade me-2"></i>Instagram</a>
+                            <!-- linkedin -->
+                            <a href="https://www.linkedin.com/in/adiityachoudhary/" target="_blank" class="text-decoration-none text-light ">
+                                <div class="mb-3 bg-dark bg-gradient rounded-pill col-12">
+                                    <div><i class="fa-brands border border-5 border-white bg-white rounded-circle fa-linkedin fa-beat-fade text-primary me-2 " style="--fa-animation-delay: 200ms;"></i>Linkedin
+                                    </div>
                                 </div>
-                            </div>
+                            </a>
+
+                             <!-- instagram -->
+                            <a href="https://www.instagram.com/adiityachoudhary/" target="_blank" class="text-decoration-none text-light ">
+                                <div class="mb-3 bg-dark bg-gradient rounded-pill col-12">
+                                    <div><i class="fa-brands border border-5 border-white bg-white rounded-circle fa-instagram fa-beat-fade text-danger me-2 " style="color: red;" style="--fa-animation-delay: 300ms;"></i>Instagram
+                                    </div>
+                                </div>
+                            </a>
+
+
                         </div>
 
                     </div>
@@ -306,7 +329,7 @@
                     <div>
                         <div class="row ">
                             <div class="col-lg-1 col-2"><i class="fa-solid fa-file-pen fa-2xl"></i></div>
-                            <h5 class="col-lg-11 col-10 gx-0">REFERENCES</h5>
+                            <h5 class="col-lg-11 col-10">REFERENCES</h5>
                             <hr class="hrw">
                         </div>
                         <div class="row">
