--- a/Resume.html
+++ b/Resume.html
@@ -6,13 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- bootstrap -->
     <link rel="stylesheet" href="bs/css/bootstrap.css">
+    <!-- css -->
+    <link rel="stylesheet" href="style.css">
     <!-- Favicon file -->
     <link rel="icon" type="image/x-icon" href="icon/cv.ico">
     <!-- Font Link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Resume</title>
+    <title>About</title>
 
     <style>
         /* bottomline border in white column */
@@ -30,13 +32,45 @@
 
         /* background color */
         body {
-            background-color: #B6B7B9
+            background-color: #9d9d9d
+        }
+
+        .img-thumbnail {
+            box-shadow: 0px 0px 15px rgb(255, 255, 255);
         }
     </style>
 </head>
 
-<body>
+<body id="about">
+    <nav class="navbar navbar-expand-lg navbar-glass navbar-sticky">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">Portfolio</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarFancy"
+                aria-controls="navbarFancy" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarFancy">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#about">About</a>
+                    </li>
+                    <li class=" nav-item">
+                        <a class="nav-link" href="index.html#projects">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
     <div class="container-fluid">
+
         <div class="container gx-0">
             <div class="row">
 
@@ -44,28 +78,30 @@
                 <div class="col-lg-3" style="background-color: #282828;">
 
                     <!-- Photo -->
-                    <div class="row px-4 text-center text-light">
+
+                    <div class="row px-5 text-center text-light">
                         <div>
                             <img src="pic/Photosquare.jpg" alt="Display Picture"
-                                class="img-fluid rounded-circle my-5 border border-5 border-light">
+                                class="img-thumbnail rounded-circle my-5  border-5 border-light hover-shadow-box-animation">
                         </div>
                     </div>
 
                     <!-- Show on Mobile devices only -->
-                    <div class="d-md-block d-lg-none text-center mb-5">
-                        <h1 class="text-white fw-bold">ADITYA CHOUDHARY</h1>
-                        <h4 class="text-muted">WEB DEVELOPER</h4>
+                    <div class="d-md-block d-lg-none text-center mb-5 ">
+                        <h1 class="text-white fw-bold ">ADITYA CHOUDHARY</h1>
+                        <h4 class="text-secondary">WEB DEVELOPER</h4>
                     </div>
 
                     <!--Contact-->
-                    <div class="row text-white pb-5">
+                    <div class="row text-white pb-5" id="contact">
                         <div>
                             <h4 class="text-center ">CONTACT</h4>
                             <hr class="border border-2 rounded">
                         </div>
                         <!-- city -->
                         <div class="row mb-4">
-                            <div class="col-lg-3 col-3"><i class="fa-solid fa-location-dot fa-bounce px-4 pt-1 fs-4"></i>
+                            <div class="col-lg-3 col-3"><i
+                                    class="fa-solid fa-location-dot fa-bounce px-4 pt-1 fs-4"></i>
                             </div>
                             <div class="col-lg-9 col-9 text-break">Patna, India</div>
                         </div>
@@ -84,14 +120,16 @@
                         <!-- github -->
                         <a href="https://github.com/adiityachoudhary" target="_blank"
                             class="row mb-4 text-decoration-none text-light">
-                            <div class="col-lg-3 col-3 "><i class="fa-brands fa-github fa-beat-fade fs-4 px-4 mt-1"></i></div>
+                            <div class="col-lg-3 col-3 "><i class="fa-brands fa-github fa-beat-fade fs-4 px-4 mt-1"></i>
+                            </div>
                             <div class="col-lg-9 col-9 text-break">github.com/adiityachoudhary</div>
                         </a>
 
                         <!-- linkedin -->
                         <a href="https://www.linkedin.com/in/adiityachoudhary/" target="_blank"
                             class="row mb-2 text-decoration-none text-light">
-                            <div class="col-lg-3 col-3 "><i class="fa-brands fa-linkedin fa-beat fs-4 px-4 mt-1" style="--fa-animation-duration: 5s;"></i></div>
+                            <div class="col-lg-3 col-3 "><i class="fa-brands fa-linkedin fa-beat fs-4 px-4 mt-1"
+                                    style="--fa-animation-duration: 5s;"></i></div>
                             <div class="col-lg-9 col-9 text-break">linkedin.com/in/adiityachoudhary</div>
                         </a>
 
@@ -175,27 +213,33 @@
                         </div>
 
                         <div class="mb-2 p-4">
-                            
+
                             <!-- github -->
-                            <a href="https://github.com/adiityachoudhary" target="_blank" class="text-decoration-none text-light">
+                            <a href="https://github.com/adiityachoudhary" target="_blank"
+                                class="text-decoration-none text-light">
                                 <div class="mb-3 bg-dark bg-gradient rounded-pill col-12">
-                                    <div><i class="fa-brands border border-5 border-white bg-white rounded-circle fa-github fa-beat-fade text-dark me-2 "style="--fa-animation-delay: 100ms;"></i>GitHub
+                                    <div><i class="fa-brands border border-5 border-white bg-white rounded-circle fa-github fa-beat-fade text-dark me-2 "
+                                            style="--fa-animation-delay: 100ms;"></i>GitHub
                                     </div>
                                 </div>
                             </a>
 
                             <!-- linkedin -->
-                            <a href="https://www.linkedin.com/in/adiityachoudhary/" target="_blank" class="text-decoration-none text-light ">
+                            <a href="https://www.linkedin.com/in/adiityachoudhary/" target="_blank"
+                                class="text-decoration-none text-light ">
                                 <div class="mb-3 bg-dark bg-gradient rounded-pill col-12">
-                                    <div><i class="fa-brands border border-5 border-white bg-white rounded-circle fa-linkedin fa-beat-fade text-primary me-2 " style="--fa-animation-delay: 200ms;"></i>Linkedin
+                                    <div><i class="fa-brands border border-5 border-white bg-white rounded-circle fa-linkedin fa-beat-fade text-primary me-2 "
+                                            style="--fa-animation-delay: 200ms;"></i>Linkedin
                                     </div>
                                 </div>
                             </a>
 
-                             <!-- instagram -->
-                            <a href="https://www.instagram.com/adiityachoudhary/" target="_blank" class="text-decoration-none text-light ">
+                            <!-- instagram -->
+                            <a href="https://www.instagram.com/adiityachoudhary/" target="_blank"
+                                class="text-decoration-none text-light ">
                                 <div class="mb-3 bg-dark bg-gradient rounded-pill col-12">
-                                    <div><i class="fa-brands border border-5 border-white bg-white rounded-circle fa-instagram fa-beat-fade text-danger me-2 " style="color: red;" style="--fa-animation-delay: 300ms;"></i>Instagram
+                                    <div><i class="fa-brands border border-5 border-white bg-white rounded-circle fa-instagram fa-beat-fade text-danger me-2 "
+                                            style="color: red;" style="--fa-animation-delay: 300ms;"></i>Instagram
                                     </div>
                                 </div>
                             </a>
@@ -358,6 +402,50 @@
     </div>
     </div>
 
+    <!-- footer -->
+    <footer class="py-3 text-center text-white" id="contact" style="background-color: black ;">
+        <ul class="list-group list-group-horizontal-lg ">
+
+            <!-- GitHub -->
+            <div class="col-lg-3 col-12 p-2"><a class="text-white" href="https://github.com/adiityachoudhary"
+                    target="_blank" style="text-decoration: none;"><i
+                        class="blur fa-brands border border-5 border-white rounded-circle text-dark bg-white fa-github fa-beat-fade me-2"></i>GitHub</a>
+            </div>
+
+
+            <!-- Linkedin -->
+            <div class="col-lg-3 col-12 p-2"><a class="text-white" href="https://www.linkedin.com/in/adiityachoudhary/"
+                    target="_blank" style="text-decoration: none;"><i
+                        class="blur fa-brands border border-5 border-white bg-white rounded-circle fa-linkedin fa-beat-fade text-primary me-2"></i>Linkedin</a>
+            </div>
+
+            <!-- twitter -->
+            <div class="col-lg-3 col-12 p-2 "><a class="text-white"
+                    href="https://twitter.com/adiityachoudhry?t=UdPDr3spRYLURaGo5MdfhQ&s=35" target="_blank"
+                    style="text-decoration: none;"><i
+                        class="blur fa-brands border border-5 border-white bg-white rounded-circle fa-twitter fa-beat-fade text-info me-2"></i>Twitter</a>
+            </div>
+
+
+            <!-- Photo footer circle -->
+            <div class="col-lg-3 col-12 pt-2"><a href="#about" class="btn btn-primary active" role="button"
+                    aria-pressed="true">Scroll up</a></div>
+        </ul>
+
+
+        <!-- visitor counter -->
+        <div>
+            <a href='https://www.free-counters.org/'>free-counters.org</a>
+            <script type='text/javascript'
+                src='https://www.freevisitorcounters.com/auth.php?id=aa23d289f64d6dd5612b99f2df178a7a4a07504a'></script>
+            <script type="text/javascript"
+                src="https://www.freevisitorcounters.com/en/home/counter/1356613/t/5"></script>
+        </div>
+    </footer>
+
+
+
+    <script src="bs/js/bootstrap.js"></script>
 
 </body>
 
