--- a/index.html
+++ b/index.html
@@ -212,7 +212,8 @@
 
         <br>
         <!-- footer -->
-        <footer class="py-3 text-center text-white" id="contact">
+        <footer class="py-4 text-center text-white footer-home" id="contact">
+            <br>
             <ul class="list-group list-group-horizontal-lg ">
 
                 <!-- GitHub -->
@@ -223,7 +224,7 @@
 
 
                 <!-- Linkedin -->
-                <div class="col-lg-3 col-12 p-2"><a class="text-white"
+                <div class="col-lg-3 col-12 p-2 "><a class="text-white"
                         href="https://www.linkedin.com/in/aditya-choudhary-908307171/" target="_blank"
                         style="text-decoration: none;"><i
                             class="blur fa-brands border border-5 border-white bg-white rounded-circle fa-linkedin fa-beat-fade text-primary me-2"></i>Linkedin</a>
@@ -239,7 +240,7 @@
 
                 <!-- Photo footer circle -->
                 <div class="col-lg-3 col-12 pt-2"><a href="index.html#home"><img src="pic/Photosquare.jpg"
-                            alt="Display picture" class="rounded-circle img-fluid img-thumbnail"></a></div>
+                            alt="Display picture" class="rounded-circle img-fluid img-thumbnail photo-footer"></a></div>
             </ul>
 
             <!-- Visitor Counter -->
