removed target=_blank from portfolio homepage

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="Resume.html" target="_blank">About</a>
+                            <a class="nav-link" href="Resume.html">About</a>
                         </li>
                         <li class=" nav-item">
                             <a class="nav-link" href="#projects">Projects</a>
@@ -104,7 +104,7 @@
                     <!-- Resume card card-1 -->
                     <div class="col order-first">
                         <div class="card">
-                            <a href="Resume.html" target="_blank" class="text-decoration-none"><img src="pic/resume.png"
+                            <a href="Resume.html" class="text-decoration-none"><img src="pic/resume.png"
                                     class="card-img-top p-1" alt="pic_resume">
                                 <div class="card-body  text-dark">
                                     <h5 class="card-title">ABOUT ME</h5>
