--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <!-- navbar css -->
     <link rel="stylesheet" href="style.css">
     <!-- favicon -->
-    <link rel="icon" href="icon/aditya.ico">
+    <link rel="icon" href="icon/dp.ico">
+
     <title>Aditya Choudhary</title>
     <style>
 
