--- a/pacman.html
+++ b/pacman.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Pacman</title>
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Permanent+Marker">
-    <link rel="icon" href="icon/pacman.ico">
+    <link rel="icon" href="icon/pacman.png">
 	<style type="text/css">
 		body {
 			background-color: black;
