--- a/Resume.html
+++ b/Resume.html
@@ -44,7 +44,7 @@
 <body id="about">
     <nav class="navbar navbar-expand-lg navbar-glass navbar-sticky">
         <div class="container">
-            <a class="navbar-brand" href="index.html">Portfolio</a>
+                <a class="navbar-brand" href="index.html"><img src="pic/adi.png" alt="logo" height="40px" ></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarFancy"
                 aria-controls="navbarFancy" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
