Fixed homepage and linkedin link

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <!-- Fancy Navbar -->
         <nav class="navbar navbar-expand-lg navbar-glass navbar-sticky">
             <div class="container">
-                <a class="navbar-brand" href="index.html"><img src="pic/adi.png" alt="logo" height="40px" ></a>
+                <a class="navbar-brand" href="index.html#home"><img src="pic/adi.png" alt="logo" height="40px" ></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarFancy"
                     aria-controls="navbarFancy" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -45,7 +45,7 @@
                 <div class="collapse navbar-collapse" id="navbarFancy">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                            <a class="nav-link active" aria-current="page" href="index.html#home">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="Resume.html">About</a>
@@ -226,7 +226,7 @@
 
                 <!-- Linkedin -->
                 <div class="col-lg-3 col-12 p-2 "><a class="text-white"
-                        href="https://www.linkedin.com/in/aditya-choudhary-908307171/" target="_blank"
+                        href="https://www.linkedin.com/in/adiityachoudhary/" target="_blank"
                         style="text-decoration: none;"><i
                             class="blur fa-brands border border-5 border-white bg-white rounded-circle fa-linkedin fa-beat-fade text-primary me-2"></i>Linkedin</a>
                 </div>
