--- a/Resume.html
+++ b/Resume.html
@@ -44,7 +44,7 @@
 <body id="about">
     <nav class="navbar navbar-expand-lg navbar-glass navbar-sticky">
         <div class="container">
-                <a class="navbar-brand" href="index.html"><img src="pic/adi.png" alt="logo" height="40px" ></a>
+                <a class="navbar-brand" href="index.html#home"><img src="pic/adi.png" alt="logo" height="40px" ></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarFancy"
                 aria-controls="navbarFancy" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -53,7 +53,7 @@
             <div class="collapse navbar-collapse" id="navbarFancy">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="index.html#home">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#about">About</a>
