--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <!-- Fancy Navbar -->
         <nav class="navbar navbar-expand-lg navbar-glass navbar-sticky">
             <div class="container">
-                <a class="navbar-brand" href="index.html#home"><img src="pic/adi.png" alt="logo" height="40px" ></a>
+                <a class="navbar-brand" href="index.html#home"><img src="pic/adi.png" alt="logo" height="40px"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarFancy"
                     aria-controls="navbarFancy" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -81,30 +81,16 @@
 
 
             <!-- Group of cards -->
-            <div class=" row mb-4 d-flex justify-content-center pb-3 m-1 cards ">
+            <div class=" row mb-4 d-flex justify-content-center pb-3 m-1 cards  ">
                 <!-- Discover Our Work text-->
                 <div class="col-12 display-3 text-center pt-3 discover" id="projects">Discover my Work</div>
 
                 <!-- four card -->
-                <div class="row row-cols-1 row-cols-md-2 g-4 p-1 ">
-                    <!-- TO-DO card card-3 -->
-                    <div class="col order-4">
-                        <div class="card">
-                            <a href="todo/index.html" target="_blank" class="text-decoration-none"><img
-                                    src="pic/todo.jpeg" class="card-img-top p-1" alt="to-do thumb">
-                                <div class="card-body text-dark">
-                                    <h5 class="card-title ">TO-DO LIST</h5>
-                                    <p class="card-text text-muted">A basic to-do list.
-                                        Add, manage, and complete tasks with
-                                        ease. Stay organized and get things done.</p>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
+                <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 g-4 p-1 ">
 
                     <!-- Resume card card-1 -->
                     <div class="col order-first">
-                        <div class="card">
+                        <div class="card h-100">
                             <a href="Resume.html" class="text-decoration-none"><img src="pic/resume.png"
                                     class="card-img-top p-1" alt="pic_resume">
                                 <div class="card-body  text-dark">
@@ -119,9 +105,9 @@
                         </div>
                     </div>
 
-                    <!-- Ecommerce Water app card-1 -->
+                    <!-- Ecommerce Water app card-2 -->
                     <div class="col order-0">
-                        <div class="card">
+                        <div class="card h-100">
                             <a href="https://adiityachoudhary.github.io/Ecommerce_Website/" target="_blank"
                                 class="text-decoration-none"><img src="pic/ecomm.jpeg" class="card-img-top p-1"
                                     alt="pic_resume">
@@ -137,9 +123,9 @@
                         </div>
                     </div>
 
-                    <!-- Puzzle game card-1 -->
+                    <!-- Puzzle game card-3 -->
                     <div class="col order-1">
-                        <div class="card">
+                        <div class="card h-100">
                             <a href="puzzle/puzzle.html" target="_blank" class="text-decoration-none"><img
                                     src="puzzle/puzzle.jpg" class="card-img-top p-1" alt="pic_resume">
                                 <div class="card-body  text-dark">
@@ -153,9 +139,9 @@
                     </div>
 
 
-                    <!-- Pacman card card-2 -->
+                    <!-- Pacman card card-4 -->
                     <div class="col order-2">
-                        <div class="card">
+                        <div class="card h-100">
                             <a href="pacman.html" target="_blank" class="text-decoration-none">
                                 <img src="pic/pacman.png" class="card-img-top p-1" alt="pic_ludo">
                                 <div class="card-body  text-dark">
@@ -169,9 +155,9 @@
                         </div>
                     </div>
 
-                    <!-- Chessboard card-3 -->
+                    <!-- Chessboard card-7 -->
                     <div class="col order-last">
-                        <div class="card">
+                        <div class="card h-100">
                             <a href="chess.html" target="_blank" class="text-decoration-none"><img src="pic/chess.png"
                                     class="card-img-top p-1" alt="pic_chessboard">
                                 <div class="card-body text-dark">
@@ -187,9 +173,9 @@
                         </div>
                     </div>
 
-                    <!-- word counter card-3 -->
+                    <!-- word counter card-5 -->
                     <div class="col order-3">
-                        <div class="card">
+                        <div class="card h-100">
                             <a href="word_counter/index.html" target="_blank" class="text-decoration-none"><img
                                     src="word_counter/word_counter.jpg" class="card-img-top p-1" alt="pic_chessboard">
                                 <div class="card-body text-dark">
@@ -203,6 +189,22 @@
 
                         </div>
                     </div>
+
+                    <!-- TO-DO card card-3 -->
+                    <div class="col order-4">
+                        <div class="card h-100">
+                            <a href="todo/index.html" target="_blank" class="text-decoration-none"><img
+                                    src="pic/todo.jpeg" class="card-img-top p-1" alt="to-do thumb">
+                                <div class="card-body text-dark">
+                                    <h5 class="card-title ">TO-DO LIST</h5>
+                                    <p class="card-text text-muted">A basic to-do list.
+                                        Add, manage, and complete tasks with
+                                        ease. Stay organized and get things done.</p>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+
 
                     <!-- card end -->
 
