Added new contact page in portfolio

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                             <a class="nav-link" href="#projects">Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#contact">Contact</a>
+                            <a class="nav-link" href="contact.html">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -81,9 +81,9 @@
 
 
             <!-- Group of cards -->
-            <div class=" row mb-4 d-flex justify-content-center pb-3 m-1 cards  ">
+            <div id="projects" class=" row mb-4 d-flex justify-content-center pb-3 m-1 cards  ">
                 <!-- Discover Our Work text-->
-                <div class="col-12 display-3 text-center pt-3 discover" id="projects">Discover my Work</div>
+                <div class="col-12 display-3 text-center pt-3 discover" >Discover my Work</div>
 
                 <!-- four card -->
                 <div class="row row-cols-1 row-cols-md-3 row-cols-lg-4 g-4 p-1 ">
