--- a/Resume.html
+++ b/Resume.html
@@ -38,6 +38,7 @@
         .img-thumbnail {
             box-shadow: 0px 0px 15px rgb(255, 255, 255);
         }
+        
     </style>
 </head>
 
@@ -62,7 +63,7 @@
                         <a class="nav-link" href="index.html#projects">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact</a>
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
