--- a/contact.html
+++ b/contact.html
@@ -71,16 +71,18 @@
         <!-- content -->
         <div class="container mt-3">
             <!-- paragraph briefing -->
-            <div class="acrylic hero-box mx-auto">
-                    <h1 class="mb-3">Get in Touch</h1>
-                    <p><strong>Name:</strong> Aditya Choudhary</p>
-                    <p><strong>Role:</strong> Web Developer | C++ Programmer</p>
+            <div class="acrylic hero-box mx-auto ">
+                    <h1 class="mb-3 text-info fw-bold">Get in Touch</h1>
+                    <h3><strong>Aditya Choudhary</strong></h3>
+                    <p>Web Developer | C++ Programmer</p>
                     <p><strong>Education:</strong> Master of Computer Applications (MCA)</p>
                     <p><strong>Expertise:</strong> Frontend Development, C++, UI/UX Design</p>
                     <p><strong>Technologies:</strong> HTML, CSS, JavaScript, Bootstrap, Tailwind, PHP, Git, GitHub</p>
                     <p><strong>Programming:</strong> C++, Python, SQL, Data Structures & Algorithms</p>
                     <p><strong>Hobbies:</strong> Building responsive Interfaces, Solving Logical Problems, Exploring New Tech</p>
                     <p><strong>Availability:</strong> Open to internships, collaborations, freelance work</p>
+                    <p><strong>📞 Phone:</strong> <a href="tel:+918539993163">+91 7543030142</a></p>
+                    <p><strong>✉️ Email:</strong> <a href="mailto:aniketkr853@gmail.com">caditya965@gmail.com</a></p>
 
                     <div class="contact-links mt-4">
                         <a href="mailto:caditya965@gmail.com" target="_blank" class="text-decoration-none">
@@ -107,7 +109,7 @@
 
         <br>
         <!-- footer -->
-        <footer class="py-4 text-center text-white footer-home" id="contact" style="background-image: url(pic/dark.jpg);">
+        <footer class=" text-center text-white footer-home" id="contact" style="background-image: url(pic/dark.jpg);">
             <br>
             <ul class="list-group list-group-horizontal-lg ">
 
@@ -134,7 +136,7 @@
 
 
                 <!-- Photo footer circle -->
-                <div class="col-lg-3 col-12 pt-2"><a href="index.html#home"><img src="pic/Photosquare.jpg"
+                <div class="col-lg-3 col-12 p-2 mb-3"><a href="index.html#home"><img src="pic/Photosquare.jpg"
                             alt="Display picture" class="rounded-circle img-fluid img-thumbnail photo-footer"></a></div>
             </ul>
         </footer>
