fixed phone no. in contact page in portfolio

--- a/contact.html
+++ b/contact.html
@@ -81,8 +81,8 @@
                     <p><strong>Programming:</strong> C++, Python, SQL, Data Structures & Algorithms</p>
                     <p><strong>Hobbies:</strong> Building responsive Interfaces, Solving Logical Problems, Exploring New Tech</p>
                     <p><strong>Availability:</strong> Open to internships, collaborations, freelance work</p>
-                    <p><strong>📞 Phone:</strong> <a href="tel:+918539993163">+91 7543030142</a></p>
-                    <p><strong>✉️ Email:</strong> <a href="mailto:aniketkr853@gmail.com">caditya965@gmail.com</a></p>
+                    <p><strong>📞 Phone:</strong> <a href="tel:+917543030142">+91 7543030142</a></p>
+                    <p><strong>✉️ Email:</strong> <a href="mailto:caditya965@gmail.com">caditya965@gmail.com</a></p>
 
                     <div class="contact-links mt-4">
                         <a href="mailto:caditya965@gmail.com" target="_blank" class="text-decoration-none">
