added whatsapp in contact page

--- a/contact.html
+++ b/contact.html
@@ -85,10 +85,16 @@
                     <p><strong>✉️ Email:</strong> <a href="mailto:caditya965@gmail.com">caditya965@gmail.com</a></p>
 
                     <div class="contact-links mt-4">
+
+                         <a href="https://wa.me/+917543030142?text=Hi%20Aditya%2C%20I%20saw%20your%20profile%20and%20wanted%20to%20connect." target="_blank" class="text-decoration-none">
+                            <img src="https://img.shields.io/badge/-whatsapp-green?style=for-the-badge&logo=whatsapp&logoColor=white"
+                                alt="Whatsapp" class="pt-1">
+                        </a>
                         <a href="mailto:caditya965@gmail.com" target="_blank" class="text-decoration-none">
                             <img src="https://img.shields.io/badge/-Email-red?style=for-the-badge&logo=gmail&logoColor=white"
                                 alt="Email" class="pt-1">
                         </a>
+
                         <a href="https://www.linkedin.com/in/adiityachoudhary/" target="_blank" class="text-decoration-none">
                             <img src="https://img.shields.io/badge/-LinkedIn-blue?style=for-the-badge&logo=linkedin&logoColor=white"
                                 alt="LinkedIn" class="pt-1">
