--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- favicon -->
     <link rel="icon" href="icon/dp.ico">
 
-    <title>Aditya Choudhary</title>
+    <title>Portfolio-Aditya</title>
     <style>
 
     </style>
@@ -63,9 +63,9 @@
 
 
         <!-- content -->
-        <div class="container mt-3">
+        <div class="container mt-3 ">
             <!-- paragraph briefing -->
-            <div class="acrylic hero-box mx-auto">
+            <div class="acrylic hero-box mx-auto ">
                 <h1 class="text-center hero-title">Welcome to My Portfolio</h1>
                 <h5 class="hero-subtitle">Crafting Digital Experiences with Precision & Passion</h5>
                 <p class="hero-description">I'm <strong>Aditya Choudhary</strong>, a passionate <strong>Web
