--- a/word_counter/index.html
+++ b/word_counter/index.html
@@ -30,7 +30,7 @@
       </section>
     </section>
     <center  style="font-family:'Courier New', Courier, monospace;">Developed with lots of ☕ by <a
-        href="https://adiityachoudhary.github.io/web-dev/" target="_parent">Aditya Choudhary</a>
+        href="https://adiityachoudhary.github.io/portfolio/" target="_parent">Aditya Choudhary</a>
   </div>
   </center>
   </div>
