Added meta tags and seo in portfolio website

--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio-Aditya</title>
+
+    <meta name="description"
+        content="Aditya Choudhary's personal portfolio showcasing creative web development projects, games, and tools. Explore responsive websites, puzzles, to-do lists, and more built with HTML, CSS, JavaScript, and Bootstrap. Let's build something amazing together.">
+    <meta name="keywords"
+        content="Aditya Choudhary, Web Developer, Frontend Developer, HTML, CSS, JavaScript, Bootstrap, Portfolio, Projects, Web Design, Responsive Websites, lnmi, patna">
+    <meta name="author" content="Aditya Choudhary">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://adiityachoudhary.github.io/portfolio/">
+
+
     <!-- font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
@@ -23,7 +34,6 @@
     <!-- favicon -->
     <link rel="icon" href="icon/dp.ico">
 
-    <title>Portfolio-Aditya</title>
     <style>
 
     </style>
@@ -83,7 +93,7 @@
             <!-- Group of cards -->
             <div id="projects" class=" row mb-4 d-flex justify-content-center pb-3 m-1 cards  ">
                 <!-- Discover Our Work text-->
-                <div class="col-12 display-3 text-center pt-3 discover" >Discover my Work</div>
+                <div class="col-12 display-3 text-center pt-3 discover">Discover my Work</div>
 
                 <!-- four card -->
                 <div class="row row-cols-1 row-cols-md-3 row-cols-lg-4 g-4 p-1 ">
