Added google verification meta tags

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         content="Aditya Choudhary, Web Developer, Frontend Developer, HTML, CSS, JavaScript, Bootstrap, Portfolio, Projects, Web Design, Responsive Websites, lnmi, patna">
     <meta name="author" content="Aditya Choudhary">
     <meta name="robots" content="index, follow">
+    <meta name="google-site-verification" content="kwKIUhfkB4T4mpsngB89dkXg-9hvGL2mhmkr9Dmf-h4" />
     <link rel="canonical" href="https://adiityachoudhary.github.io/portfolio/">
 
 
