--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <meta name="robots" content="index, follow">
     <meta name="google-site-verification" content="kwKIUhfkB4T4mpsngB89dkXg-9hvGL2mhmkr9Dmf-h4" />
     <link rel="canonical" href="https://adiityachoudhary.github.io/portfolio/">
+    <link rel="sitemap" type="application/xml" title="Sitemap" href="sitemap.xml">
+
 
 
     <!-- font awesome -->
